feat: 实现用户认证系统及前端登录功能
- 后端添加JWT认证模块，包括用户模型、登录接口和权限验证
- 前端实现登录页面和认证状态管理
- 添加测试脚本和测试用例确保功能稳定性
- 更新文档说明认证相关API和使用方法
- 修复前端请求拦截器添加token的逻辑

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,19 @@
 {
     "cSpell.words": [
+        "autoflush",
+        "dotenv",
+        "fastapi",
         "gunicorn",
+        "LASTEXITCODE",
+        "onupdate",
+        "passlib",
         "psql",
+        "psycopg",
         "pycache",
         "Pydantic",
+        "pytest",
+        "sessionmaker",
+        "sqlalchemy",
         "Uvicorn",
         "yourpassword",
         "zhangsan"
