feat: 增强删除操作的级联处理与确认提示
- 为所有删除操作添加详细的级联影响确认提示
- 实现后端级联删除逻辑，包括关联文件和数据库记录
- 添加错误处理显示具体错误信息
- 修复项目模型中的标签验证和日期字段问题
- 添加测试脚本用于调试数据库问题

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "autoflush",
+        "daterange",
         "dotenv",
         "fastapi",
         "gunicorn",
@@ -12,6 +13,7 @@
         "pycache",
         "Pydantic",
         "pytest",
+        "sess",
         "sessionmaker",
         "sqlalchemy",
         "Uvicorn",
