--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
+  "main": "electron/main.cjs",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:desktop": "vite build --mode desktop",
+    "desktop:dev": "npm run build:desktop && electron .",
+    "desktop:build": "npm run build:desktop && electron-builder build -w"
   },
   "dependencies": {
     "vue": "^3.4.15",
@@ -20,6 +24,28 @@
     "@vitejs/plugin-vue": "^5.0.3",
     "vite": "^5.0.11",
     "typescript": "^5.3.3",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^1.8.27",
+    "electron": "^28.2.0",
+    "electron-builder": "^24.6.4"
+  },
+  "build": {
+    "appId": "com.lab313.app",
+    "productName": "Lab313",
+    "files": [
+      "dist/**",
+      "electron/**"
+    ],
+    "directories": {
+      "output": "release"
+    },
+    "win": {
+      "target": ["nsis"],
+      "artifactName": "${productName}-${version}-Setup.${ext}"
+    },
+    "nsis": {
+      "oneClick": true,
+      "perMachine": false,
+      "allowToChangeInstallationDirectory": false
+    }
   }
 }
