feat(profile): 新增个人中心页面与主题管理系统
- 添加个人中心页面，支持头像上传和基本信息编辑
- 实现主题管理系统，包含青釉和绛红两种预设主题
- 增加自定义主题功能，可调整玻璃模糊强度、透明度等参数
- 添加自动对比工具，根据背景亮度优化文字显示
- 更新布局组件，适配新主题系统
- 完善文档，更新TODO列表和部署指南

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,13 @@
         "daterange",
         "dotenv",
         "fastapi",
+        "Gbps",
         "gunicorn",
+        "jiang",
+        "keepalive",
         "LASTEXITCODE",
+        "NSIS",
+        "NSSM",
         "onupdate",
         "passlib",
         "psql",
@@ -13,10 +18,12 @@
         "pycache",
         "Pydantic",
         "pytest",
+        "qing",
         "sess",
         "sessionmaker",
         "sqlalchemy",
         "Uvicorn",
+        "VITE",
         "yourpassword",
         "zhangsan"
     ]
